--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,8 @@ a {
     margin: 0 auto;
     max-width: 1200px;
     padding: 10px;
-    color: white;
+    color: rgb(230, 255, 238);
+    text-align: justify;
 }
 
 .mainHeader {
@@ -39,7 +40,10 @@ a {
 .photo {
     margin: 0 auto;
     width: 300px;
-    height: 300px;
+    height: 400px;
+    border: 2px solid #50a64e;
+    border-radius: 24px;
+    overflow: hidden;
     cursor: pointer;
     img {
         max-width: 100%;
@@ -75,14 +79,17 @@ a {
     }
 
     &__inner {
-        width: 700px;
+        border: 2px solid #50a64e;
+        border-radius: 24px;
+        overflow: hidden;
+        width: 525px;
         height: 700px;
         @media (max-width: 767.98px) {
-            width: 400px;
+            width: 300px;
             height: 400px;
         }
         @media (max-width: 479.98px) {
-            width: 300px;
+            width: 225px;
             height: 300px;
         }
         img {
@@ -94,7 +101,7 @@ a {
 }
 
 .header {
-    margin: 10px 0px;
+    margin: 20px 0px 10px 0px;
 }
 
 .contacts {
@@ -135,7 +142,7 @@ a {
         }
         &.small {
             @media (max-width: 479.98px) {
-                height: 290px;
+                height: 310px;
             }
         }
     }
@@ -149,6 +156,7 @@ a {
         left: 0;
         border-radius: 20px;
         overflow: hidden;
+        border: 2px solid #50a64e;
     }
 
     &__front {
@@ -192,8 +200,13 @@ a {
     }
 
     &__info {
-        padding: 5px 15px;
+        padding: 0 15px 5px 15px;
         text-align: justify;
+
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     &__item:hover .works__card {
