--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,15 @@ a {
     color: white;
 }
 
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+}
+
 .App {
     background: #43225e;
     background: radial-gradient(#00b3ff 5%, #131111 80%);
@@ -25,11 +34,59 @@ a {
 }
 
 .container {
+    position: relative;
     margin: 0 auto;
     max-width: 1200px;
     padding: 10px;
     color: rgb(230, 255, 238);
-    text-align: justify;
+}
+
+.langButton {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    color: #000000;
+    text-align: center;
+
+    &__current {
+        padding: 5px 10px;
+        border-radius: 24px;
+        background-color: #6ab9ff;
+        transition: scale 0.3s ease 0s;
+
+        &:hover {
+            scale: 1.2;
+        }
+    }
+
+    &__dialog {
+        position: absolute;
+        top: calc(100% + 8px);
+        right: 0;
+        border-radius: 24px;
+        overflow: hidden;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease 0s;
+
+        &.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
+    &__dialogItem {
+        display: block;
+        width: 100%;
+        padding: 10px 20px;
+        background-color: #6ab9ff;
+        cursor: pointer;
+        transition: background-color 0.5s ease 0s;
+
+        &:hover {
+            background-color: #89c7fc;
+        }
+    }
 }
 
 .mainHeader {
@@ -59,7 +116,7 @@ a {
     }
 }
 
-.popap {
+.popup {
     position: fixed;
     z-index: 2;
     top: 0;
